<resources>
    <string name="app_name">Gestor de Demandas</string>
    <string name="cadastro">Cadastro</string>
    <string name="listar">Listar</string>
    <string name="nova_demanda">Nova Demanda</string>
    <string name="demandas_cadastradas">Cadastradas</string>

    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="lista">Lista</string>
    <string name="grade">Grade</string>

    <string name="nome_gp">Gerente do Projeto</string>
    <string name="num">Número</string>
    <string name="titulo">Título</string>
    <string name="status">Status</string>
    <string name="responsavel">Responsável</string>
    <string name="prazo">Prazo</string>
    <string name="observacao">Observação</string>

    <string-array name="gerentes_projeto">

        <item>Alexandre Trevisani</item>
        <item>Luciado Matias</item>
        <item>Miguel Prazeres</item>

    </string-array>

    <string name="desenvolvimento">Em desenvolvimento</string>
    <string name="impedimento">Em impedimento</string>
    <string name="homologacao">Em homologação</string>
    <string name="finalizada">Finalizada</string>

    <string-array name="status_demanda">

        <item>@string/desenvolvimento</item>
        <item>@string/impedimento</item>
        <item>@string/homologacao</item>
        <item>@string/finalizada</item>

    </string-array>

</resources>
