<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.CadastroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome_gp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/xlarge_text_size"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sp_nome_gp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_layout_margin"
                android:entries="@array/gerentes_projeto" />


            <EditText
                android:id="@+id/et_num_demanda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_layout_margin"
                android:hint="@string/num"
                android:inputType="number" />


            <EditText
                android:id="@+id/et_titulo_demanda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_layout_margin"
                android:hint="@string/titulo"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_layout_margin"
                android:text="@string/status"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/xlarge_text_size"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sp_status_demanda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_layout_margin"
                android:entries="@array/status_demanda" />

            <EditText
                android:id="@+id/et_responsavel_demanda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_layout_margin"
                android:hint="@string/responsavel"
                android:inputType="text" />

            <EditText
                android:id="@+id/et_prazo_demanda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_layout_margin"
                android:hint="@string/prazo"
                android:focusable="false"
                android:inputType="none" />

            <EditText
                android:id="@+id/et_observacao_demanda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_layout_margin"
                android:hint="@string/observacao"
                android:inputType="textMultiLine" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
